--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 spring.application.name=TaskManagement
-server.port=8082
+# Renderが渡すポートを使う（8080はローカル実行時のデフォルト）
+server.port=${PORT:8080}
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://dpg-d1186p3e5dus738h69f0-a.singapore-postgres.render.com:5432/task_management_to7l
+spring.datasource.url=jdbc:postgresql://dpg-d1186p3e5dus738h69f0-a.singapore-postgres.render.com:5432/task_management_to7l?sslmode=require
 spring.datasource.username=sht_user
 spring.datasource.password=CZzGq0FlqgVHg785Qxyw3ltIQJ3UL3Ts
 
