--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=TaskManagement
-# Renderが渡すポートを使う（8080はローカル実行時のデフォルト）
+# Renderが渡すポートを使う（${PORT:8080}:8080はローカル実行時のデフォルト）
 server.address=0.0.0.0
-server.port=8083
+server.port=${PORT:8080}
 
 
 #PostgreSQL
@@ -11,3 +11,7 @@ spring.datasource.password=CZzGq0FlqgVHg785Qxyw3ltIQJ3UL3Ts
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Flyway設定を有効（下記パスにマイグレーションファイル格納）
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
