--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<version>9.22.0</version>
 		</dependency>
 
 		<!-- Spring Data JPA -->
