--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,3 +15,4 @@ spring.jpa.show-sql=true
 #Flyway設定を有効（下記パスにマイグレーションファイル格納）
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
