--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=TaskManagement
 # Renderが渡すポートを使う（${PORT:8080}:8080はローカル実行時のデフォルト）
 server.address=0.0.0.0
-server.port=8100
+server.port=${PORT:8080}
 
 #PostgreSQL
 spring.datasource.url=jdbc:postgresql://dpg-d1186p3e5dus738h69f0-a.singapore-postgres.render.com:5432/task_management_to7l?sslmode=require
